# confide

./: Cargo.toml  README.md  license-apache  license-mit
confide/: Cargo.toml
confide-impl/: Cargo.toml
confide-impl/src/: lib.rs
confide/examples/: quick_start.rs
confide/examples/snapshots/: quick_start__main.snap
confide/src/: lib.rs
