[package]
name = "confide-impl"
description = "proc-macro backend for #[confide]"
repository.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.46"
syn = { version = "2.0.118", features = ["full"] }
humantime = "2.4.0"

[lib]
proc-macro = true
