[package]
name = "confide-impl"
description = "proc-macro backend for #[confide]"
repository.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full"] }
humantime.workspace = true
bytesize.workspace = true

[lib]
proc-macro = true
