[package]
name = "confide"
description.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
humantime-serde.workspace = true
bytesize.workspace = true
serde.workspace = true
confide-impl = { path = "../confide-impl", version = "0.0.0" }

[dev-dependencies]
insta = "1.48.0"
serde = { version = "1.0.228", features = ["derive"] }
